@@ -17,6 +17,7 @@ ATTENTION: The following mission file(s) has/have changed: TT Malden, Altis Bluf
 - Added: d_uids_def_choppers (also available in dom_settings table); if the array is filled with player UIDs (strings) only those players can fly the initial choppers at base
 - Added: Parameter d_dis_servicep/Disable all service points, including FARPs (no refuel, no repair, no rearm)
 - Added: Fires at main targets
+- Added: Parameter d_playerspectateatbase (Player can spectate other players at base flag), default 0 or Yes
 - Changed: CAS with very short cooldown (90 secs) if artillery is set to unlimited, by longtimegamer
 - Changed: Added visibility check for player and AI names over the head, means, players see the names above head if the unit is visible and not all the time
 - Changed: Maintarget prisoner event now has a suicide bomb if the rescue is botched, by longtimegamer
