@@ -355,3 +355,4 @@ STR_DOM_MISSIONSTRING_2053
 STR_DOM_MISSIONSTRING_2054
 STR_DOM_MISSIONSTRING_2055
 STR_DOM_MISSIONSTRING_2056
+STR_DOM_MISSIONSTRING_2057
